--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
 Welcome to the Sewing Machine repo for CCHS!
 
-Head on over to the [wiki](https://github.com/CCHS-Melbourne/Sewing-Machines/wiki) for documentation.
+Head on over to the (wiki)[https://github.com/CCHS-Melbourne/Sewing-Machines/wiki] for documentation.
